Added code auto-formatter for consistency